tests-integration/fixtures/checking/223_ado_let_annotation_solve/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
unit :: Unit
pure :: forall (a :: Type). (a :: Type) -> Effect (a :: Type)
map ::
  forall (a :: Type) (b :: Type).
    ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
apply ::
  forall (a :: Type) (b :: Type).
    Effect ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
thing1 :: Effect String
test :: Effect Unit

Types
Effect :: Type -> Type
Unit :: Type

Roles
Effect = [Nominal]
Unit = []

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Int'
  --> 19:9..19:10
   |
19 |     f = a
   |         ^
